--- a/packages/chat/package.json
+++ b/packages/chat/package.json
@@ -14,6 +14,7 @@
     "devDependencies": {
         "@rollup/plugin-commonjs": "^15.0.0",
         "@types/lodash": "^4.14.159",
+        "@types/lodash.debounce": "^4.0.6",
         "rollup": "^2.26.3",
         "rollup-plugin-babel": "^4.4.0",
         "rollup-plugin-node-resolve": "^5.2.0",
@@ -21,6 +22,6 @@
         "rollup-plugin-typescript2": "^0.27.2"
     },
     "dependencies": {
-        "lodash": "^4.17.20"
+        "lodash.debounce": "^4.0.8"
     }
 }
