--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ireact-hooks",
-  "version": "0.1.0",
+  "version": "0.3.0",
   "scripts": {
     "build": "lerna run build",
     "publish": "lerna publish"
@@ -18,13 +18,13 @@
     "@babel/plugin-syntax-class-properties": "^7.10.4",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-typescript": "^7.10.4",
-    "lerna": "^3.22.1",
-    "typescript": "^3.9.7"
+    "lerna": "^3.22.1"
   },
   "dependencies": {
     "@types/node": "^14.6.0",
     "@types/react": "^16.9.46",
-    "react": "^16.13.1"
+    "react": "^16.13.1",
+    "typescript": "^4.3.5"
   },
   "peerDependencies": {
     "react": ">=16.8"
