--- a/packages/tableselect/package.json
+++ b/packages/tableselect/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@ireact-hooks/tableselect",
-    "version": "0.2.1",
+    "version": "0.1.0",
     "files": [
         "lib"
     ],
@@ -21,5 +21,6 @@
     },
     "dependencies": {
         "rollup-plugin-css-only": "^3.1.0"
-    }
+    },
+    "gitHead": "fdb7b5638b12f12fff1da5ad28af9e203e2edba4"
 }
