--- a/packages/dragselect/package.json
+++ b/packages/dragselect/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@ireact-hooks/tableselect",
+    "name": "@ireact-hooks/dragselect",
     "version": "0.1.0",
     "files": [
         "lib"
@@ -15,12 +15,11 @@
         "@rollup/plugin-commonjs": "^15.0.0",
         "rollup": "^2.26.3",
         "rollup-plugin-babel": "^4.4.0",
+        "rollup-plugin-css-only": "^3.1.0",
         "rollup-plugin-node-resolve": "^5.2.0",
         "rollup-plugin-terser": "^7.0.0",
         "rollup-plugin-typescript2": "^0.27.2"
     },
-    "dependencies": {
-        "rollup-plugin-css-only": "^3.1.0"
-    },
+    "dependencies": {},
     "gitHead": "fdb7b5638b12f12fff1da5ad28af9e203e2edba4"
 }
